# automation-platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
config/: deterministic_rules.example.yaml  deterministic_rules.yaml  email_groups.example.yaml  labels.json
docs/: deterministic_rules.md  development_environment.md  gmail_setup.md  llm_configuration.md  mlx_server_setup.md  spec.md
src/core/: config.py
src/integrations/: gmail_client.py  llm_client.py
src/utils/: logging.py
src/workflows/: __main__.py  deterministic_rules.py  email_triage.py
tests/: conftest.py  test_deterministic_rules.py  test_email_triage.py  test_gmail_client.py  test_llm_client.py  test_mlx_server_integration.py
thoughts/: agent-architecture-proposal.md
thoughts/shared/handoffs/general/: 2025-10-09_02-04-50_phase2-llm-integration.md
thoughts/shared/plans/: 2025-10-08-email-classification-mvp.md  2025-10-29-phases-3-5-mvp-completion.md
thoughts/shared/research/: 2025-10-28-project-plan-consolidation.md
