[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-platform"
version = "0.1.0"
description = "Modular Python automation framework for macOS"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.184.0",
    "llm>=0.27.1",
    "llm-mlx>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.7.4",
    "mypy>=1.18.2",
    "ipython>=9.6.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
